# Whisper-Transcription

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: app.py  db.py
src/static/: history.html  index.html  styles.css
