[project]
name = "transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "fastapi>=0.135.2",
    "openai-whisper>=20250625",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
